web-infras/parser/tests/fixtures/babel/core/uncategorised/466/output.txt
[SyntaxError]: applying the 'delete' operator to an unqualified name is deprecated (1,30)
1|(function () { 'use strict'; delete i; }())
 |                            ^
